# go-regex

./: .gitignore  CMakeLists.txt  bhargav.txt  go.mod
cmake/: Findgo-regex.cmake  Findregex.cmake
src/: regextoken.go
